Changelog
=========

1.2.3 (unreleased)
------------------

- Nothing changed yet.


1.2.2 (2013-10-21)
------------------

- Rename news portlet (migration conflict).
  [mathias.leimgruber]


1.2.1 (2013-01-30)
------------------

- Fix confusing label.
  [mathias.leimgruber]


1.1 (2013-01-24)
----------------

- Use new news portlet.
  [timon.tschanz]

- Override plone byline. Don't register a second one.
  [tschanzt]

- Move package to github.
  [jone]

- Implement News as Simplelaylout block.
  [mathias.leimgruber]

- Import registerType from LinguaPlone if its installed.
  [Julian Infanger]

- Fix wrong initial metadata according to latest upgrade.
  [jone]


1.0.8 (2012-06-28)
------------------

- Fixed error in newsportlet using a template for collection portlet.
  [Julian Infanger]


1.0.7 (2012-06-13)
------------------

- News-listing: New news should be listed at top.
  [Julian Infanger]


1.0.6 (2012-06-08)
------------------

- Created upgradestep to install NewsFolder and dont allow to add
  News in OrgUnit or ContentPage.
  [Julian Infanger]

- Added new content type NewsFolder. Created news_archive_listing.
  [Julian Infanger]


1.0.5 (2012-05-30)
------------------

- Fixed byline viewlet. Added creator and modification date.
  [Julian Infanger]


1.0.4 (2012-05-09)
------------------

- Added default date for news.
  [Julian Infanger]

- Added viewlets for byline and image.
  [Julian Infanger]

- Improved news listing view
  [Julian Infanger]


1.0.3 (2012-04-05)
------------------

- Fix RSS-Feed format.
  [mathias.leimgruber]

- german translations
  [mathias.leimgruber]


1.0.2 (2012-04-02)
------------------

- Fix collective.portlet.collectionmultiview imports.
  [eschmutz]


1.0.1 (2012-03-05)
------------------

- Initial release
- news type based on simplelayout page
- add simple topic summary news view