@@ -4,7 +4,7 @@
       i18n:domain="plone">
 
       <metal:block metal:fill-slot="head_slot">
-        <link rel="alternate" type="application/rss+xml" title="RSS" tal:attributes="href string:${context/absolute_url}/news_rss_listing"
+        <link rel="alternate" type="application/rss+xml" title="RSS" tal:attributes="href string:${context/absolute_url}/news_rss_listing_sl"
          />
       </metal:block>
 
@@ -24,14 +24,14 @@
         inputs.datepicker();
         inputs.change(function(e){
             result.addClass('loading');
-            result.load('./news_listing/news_result', jq('#archiv_form').serializeArray(), function(){result.removeClass('loading');});
+            result.load('./news_listing_sl/news_result', jq('#archiv_form').serializeArray(), function(){result.removeClass('loading');});
         });
     });
     </script>
 </metal:js>
 <metal:main fill-slot="content-core">
 <tal:define define="toLocalizedTime nocall:context/@@plone/toLocalizedTime">
-<form id="archiv_form" action="./news_listing" method="get"
+<form id="archiv_form" action="./news_listing_sl" method="get"
       tal:condition="python:view.__name__!='news_archive_listing'"
       tal:define="start python:toLocalizedTime(view.get_today(minus=30));
                   end python:toLocalizedTime(view.get_today());">
