@@ -3,6 +3,6 @@
    meta_type="Factory-based Type Information with dynamic views"
    i18n:domain="plone" xmlns:i18n="http://xml.zope.org/namespaces/i18n">
  <property name="view_methods" purge="False">
-  <element value="news_listing"/>
+  <element value="news_listing_sl"/>
  </property>
 </object>
